# ear-production-suite

./: CMakeLists.txt
.github/workflows/: build.yml
cmake_modules/: eps_set_install_paths.cmake
ear-production-suite-plugins/lib/src/: programme_store_adm_serializer.cpp
ear-production-suite-plugins/plugins/direct_speakers/: CMakeLists.txt
ear-production-suite-plugins/plugins/monitoring/: CMakeLists.txt
ear-production-suite-plugins/plugins/object/: CMakeLists.txt
ear-production-suite-plugins/plugins/scene/: CMakeLists.txt
packaging/: CMakeLists.txt
reaper-adm-export-source-plugin/src/: CMakeLists.txt
reaper-adm-extension/src/reaper_adm/: CMakeLists.txt  admextraction.h  mediatakeelement.cpp  objectautomationelement.cpp
reaper-adm-extension/test/reaper_adm/: blockbuilders.cpp  blockbuilders.h
tools/project_upgrade/: CMakeLists.txt
tools/project_upgrade/gui_app/: Main.cpp  MainComponent.cpp  MainComponent.h
